# RoomRTC

./: .gitignore  Cargo.toml  INFORME_TECNICO_ROOMRTC.md  README.md  STRUCTURE.md
.github/: CONTRIBUTING.md  (+3 more)
backend/: CONFIG.md  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  identity.pfx  server_config.json  users.txt
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/handlers/: message_handler.rs
backend/src/application/usecases/: auth_usecase.rs  call_usecase.rs  mod.rs  signaling_usecase.rs  user_usecase.rs
backend/src/config/: logging_config.rs  mod.rs  room_rtc_config.rs  server_config.rs
backend/src/domain/: call.rs  call_state.rs  mod.rs  user.rs  user_state.rs
backend/src/infrastructure/: mod.rs  persistence.rs  storage.rs
backend/src/tcp/: client_handler.rs  mod.rs  protocol.rs  server.rs  stream_type.rs
backend/src/tcp/messages/: call.rs  common.rs  json_helpers.rs  login.rs  logout.rs  message.rs  message_type.rs  mod.rs  register.rs  signaling.rs  user.rs
backend/src/tcp/tls/: acceptor.rs  error.rs  mod.rs  stream.rs
backend/tests/: integration_auth.rs  integration_calls.rs
frontend/: .dockerignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LOGGING.md  README.md  app.conf  docker-compose.yml
frontend/src/: main.rs
frontend/src/app/: logic_handler.rs  mod.rs  server_handler.rs  state.rs  ui_handler.rs
frontend/src/components/: button.rs  card.rs  dialog.rs  empty_state.rs  mod.rs  search_bar.rs  stats_panel.rs  toast.rs  user_avatar.rs  user_card.rs  user_menu.rs
frontend/src/config/: app_config.rs  mod.rs
frontend/src/context/: user_context.rs
frontend/src/events/: logic_command.rs  logic_event.rs  mod.rs  ui_command.rs
frontend/src/infrastructure/: mod.rs  tcp_client.rs  tls_client.rs
frontend/src/logic/: audio_thread.rs  camera_thread.rs  mod.rs  receive_thread.rs  state.rs  utils.rs  webrtc_handler.rs
frontend/src/models/: mod.rs  participant.rs  room.rs
frontend/src/pages/: lobby.rs  login.rs  mod.rs
webrtc/: Cargo.toml  README.md
webrtc/ice/: Cargo.toml  README.md
webrtc/ice/src/: candidate.rs  candidate_builder.rs  candidate_pair.rs  candidate_type.rs  connection_state.rs  connectivity.rs  errors.rs  ice_agent.rs  ip_detection.rs  lib.rs
webrtc/media/: Cargo.toml  README.md
webrtc/media/src/: camera_pool.rs  error.rs  lib.rs
webrtc/network/: Cargo.toml  README.md
webrtc/network/src/: error.rs  lib.rs  traits.rs
webrtc/sdp/: Cargo.toml  README.md
webrtc/sdp/src/: attribute.rs  connection.rs  errors.rs  lib.rs  media_description.rs  origin.rs  sdp_type.rs  session_description.rs  session_description_builder.rs  timing.rs
webrtc/src/: audio_info.rs  audio_manager.rs  camera_info.rs  camera_manager.rs  lib.rs
webrtc/src/connection/: audio.rs  camera.rs  ice.rs  mod.rs  sdp.rs  webrtc_connection.rs
webrtc/src/session/: config.rs  control_message.rs  dtls_setup.rs  file_session.rs  mod.rs  recv_thread.rs  secure_session.rs  send_thread.rs  video_decode_thread.rs
webrtc/stun/: Cargo.toml  README.md
webrtc/stun/src/: attribute_type.rs  client.rs  errors.rs  lib.rs  message.rs  message_builder.rs  message_header.rs  message_type.rs  xor_mapped_address.rs
webrtc/stun/tests/: integration_tests.rs
webrtc/turn/: Cargo.toml  README.md
webrtc/turn/src/: client.rs  errors.rs  lib.rs  message.rs  turn_attribute_type.rs  turn_message_type.rs
(+127 files in other folders)
