[package]
name = "network"
version = "1.0.0"
edition = "2024"

[dependencies]
# Utilities
rand = "0.8"

# Cryptography for SRTP
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"

# DTLS
openssl = "0.10"
dimpl = { version = "0.2", default-features = false, features = ["aws-lc-rs", "rcgen"] }

logging = { path = "../../shared/logger" }
media = { path = "../media" }

[dev-dependencies]
tempfile = "3.23"
